Sat Sep 15 01:11:15 UTC 2012  Steve Huston  <shuston@riverace.com>

        * ace/Atomic_Op.h:
        * ace/Atomic_Op.inl: PPC doesn't have the requisite support for
          the long long specializations below.

Thu Sep 13 16:46:03 UTC 2012  Steve Huston  <shuston@riverace.com>

        * ace/Atomic_Op.h:
        * ace/Atomic_Op.inl: Added specializations for "long long" and
          "unsigned long long" for GCC to get the better performance
          for 64-bit integers.

Tue Sep 11 18:59:35 UTC 2012  Steve Huston  <shuston@riverace.com>

        * ace/TSS_T.cpp (ACE_TSS_Guard::init_key): Fix compile error.

Mon Sep 10 13:57:27 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/DLL.h:
        * ace/DLL.cpp:
        * ace/DLL_Manager.h:
        * ace/DLL_Manager.cpp:
          Use bool for become_owner

Mon Sep 10 00:16:29 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/diff-builds-and-group-fixed-tests-only.sh:
        * bin/mail_test_stats.sh:
          Make sure we compare with the latest micro

Fri Sep  7 20:00:51 UTC 2012  Steve Huston  <shuston@riverace.com>

        * ace/SSL/SSL_SOCK_Stream.inl (recv_i): Remove the incorrect comment
          form the syscall case about falling through to the default. That's
          not right. Thanks to Simon Massey for pointing this out.

Fri Sep  7 19:43:12 UTC 2012  Steve Huston  <shuston@riverace.com>

        * ace/Sig_Handler.cpp (remove_handler_i): Check if the event handler
          pointer is 0 before calling through it. Thanks to Adam Mitz
          for catching this one.

Thu Sep  6 18:51:47 UTC 2012  Steve Huston  <shuston@riverace.com>

        * ace/Sig_Handler.h:
        * ace/Sig_Handler.cpp: Call back to ACE_Event_Handler::handle_close()
          when a signal handler is removed by any means. The callback was
          previously made only when dispatched handle_signal() returned -1.
          This adds the callback when the signal handler is unregistered