@@ -1,3 +1,8 @@
+Thu Sep 20 07:09:41 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * tests/Network_Adapters_Test.cpp:
+          Removed arg_unused macros.
+
 Sat Sep 15 01:11:15 UTC 2012  Steve Huston  <shuston@riverace.com>
 
         * ace/Atomic_Op.h:
